--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly('com.h2database:h2')
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+	compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
 	runtimeOnly 'mysql:mysql-connector-java'
+	testCompile group: 'junit', name: 'junit', version: '4.13'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 test {
