--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,14 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 admin.mail=mturczyn15@gmail.com
 admin.name=Marcin Turczyn
 
+#API AMADEUS
+amadeus.api.endpoint.prod=http://test.api.amadeus.com/v1
+amadeus.app.key=QQYtnBk2yQCRAkrk3kJtADALlgIAXWO3
+amadeus.app.secret=77zRuogZrrqpA61G
+amadeus.app.token=8iYhMHNjUn4C5nhUyMeG6wE0KsTy
 
+
+#API AIRLABS.CO
+airlabs.api.endpoint.prod=http://airlabs.co/api/v6
+airlabs.app.key=47202a42-0197-4e45-9ff0-4a2fae79558c
 
