--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compile 'com.amadeus:amadeus-java:5.0.0'
 	compileOnly 'org.projectlombok:lombok'
 	compile 'com.google.code.gson:gson:2.8.+'
 	runtimeOnly('com.h2database:h2')
