--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,4 @@
+#DATABASE CONFIGURATION
 #Database configuration
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
@@ -6,6 +7,7 @@ spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
 
 # EMAIL CONFIGURATION
 spring.mail.host=smtp.gmail.com
@@ -18,3 +20,15 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #ADMIN
 admin.mail=mturczyn15@gmail.com
 admin.name=Marcin Turczyn
+
+#API AMADEUS
+amadeus.api.endpoint.prod=http://test.api.amadeus.com/v1
+amadeus.app.key=QQYtnBk2yQCRAkrk3kJtADALlgIAXWO3
+amadeus.app.secret=77zRuogZrrqpA61G
+amadeus.app.token=8iYhMHNjUn4C5nhUyMeG6wE0KsTy
+
+
+#API AIRLABS
+airlabs.api.endpoint.prod=http://airlabs.co/api/v6
+airlabs.app.key=47202a42-0197-4e45-9ff0-4a2fae79558c
+
