--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ amadeus.app.secret=77zRuogZrrqpA61G
 amadeus.app.token=8iYhMHNjUn4C5nhUyMeG6wE0KsTy
 
 
-#API AIRLABS.CO
+#API AIRLABS
 airlabs.api.endpoint.prod=http://airlabs.co/api/v6
 airlabs.app.key=47202a42-0197-4e45-9ff0-4a2fae79558c
 
