--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8080
 #DATABASE CONFIGURATION
 spring.datasource.url=jdbc:mysql://localhost:3306/travel?serverTimezone=Europe/Warsaw&useSSL=False
 spring.datasource.username=agency
