--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	compile 'com.google.code.gson:gson:2.8.+'
 	compile group: 'postgresql', name: 'postgresql', version: '42.2.5'
-	runtimeOnly('com.h2database:h2')
+	//runtimeOnly('com.h2database:h2')
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
 	//runtimeOnly 'mysql:mysql-connector-java'
