--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,12 @@
-#server.port=8080
+server.port=8080
 #DATABASE CONFIGURATION
-
-
-
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.database=postgresql
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/travel?serverTimezone=Europe/Warsaw&useSSL=False
-#spring.datasource.username=agency
-#spring.datasource.password=agency
-#spring.jpa.database=mysql
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-
+spring.datasource.url=jdbc:mysql://localhost:3306/travel?serverTimezone=Europe/Warsaw&useSSL=False
+spring.datasource.username=agency
+spring.datasource.password=agency
+spring.jpa.database=mysql
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # EMAIL CONFIGURATION
 spring.mail.host=smtp.gmail.com
