--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,14 @@
 server.port=8080
 #DATABASE CONFIGURATION
+spring.datasource.url=jdbc:h2:file:~/test2;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.username=admin
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=sa
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.jpa.show-sql=true
-#spring.datasource.url=jdbc:mysql://localhost:3306/travel?serverTimezone=Europe/Warsaw&useSSL=False
-#spring.datasource.username=agency
-#spring.datasource.password=agency
-#spring.jpa.database=mysql
-
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # EMAIL CONFIGURATION
 spring.mail.host=smtp.gmail.com
