--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -23,8 +23,8 @@ admin.name=Marcin Turczyn
 
 #API AMADEUS
 amadeus.api.endpoint.prod=http://test.api.amadeus.com/v1
-amadeus.app.key=QQYtnBk2yQCRAkrk3kJtADALlgIAXWO3
-amadeus.app.secret=77zRuogZrrqpA61G
+amadeus.app.key=v7MHRGtxZTU77uPtuMlT7txxL4DLL6YF
+amadeus.app.secret=UrfUsVgMMv6XRtQq
 amadeus.app.token=8iYhMHNjUn4C5nhUyMeG6wE0KsTy
 
 
